Grace/tests/gibbs/errors/t118.grace
// ERROR = P1029
method x {
    print "X marks the spot."
}
}
